# algo-visualizer.github.io

./: README.md  generate_docs.py  generate_schema.py  generate_wheel.py  generate_wheels.py  index.html  metadata.json  package.json  refactor.md  requirements.txt  snapshots.json  test.py  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml
public/docs/: index.html  search.js  visual.html
public/docs/visual/: core.html  type.html  types.html
public/pyodide_packages/: algo_visualizer_python-0.0.0-py3-none-any.whl  python_lsp-0.0.0-py3-none-any.whl
pyapi/: README.md  build.txt  generate_docs.txt  pyproject.toml  requirements.txt
pyapi/src/visual/: __init__.py
pyapi/src/visual/core/: __init__.py  watcher.py
pyapi/src/visual/type/: graph.py  snapshot.py  watchable.py
pyapi/src/visual/types/: graph.py  pointable.py  watchable.py
pylsp/: pyproject.toml
pylsp/src/lsp/: __init__.py
schema/: Snapshot.json
src/: App.tsx  constants.ts  types.ts
src/components/: ArrayVisualizer.tsx  Controls.tsx  Editor.tsx  NodesVisualizer.tsx  SnapshotOutput.tsx  Visualizer.tsx
src/hooks/: useCodeExecutor.ts  useResponsiveLayout.ts
src/layout/: AppDrawer.tsx  AppHeader.tsx  Controls.tsx  MobileTabs.tsx  Settings.tsx
src/python/: pythonCodeExecutor.ts  pythonLSP.ts
src/services/: pyodideService.ts
src/stores/: useLSPStore.ts  useUIStore.ts  useVisualizationStore.ts  useWorkerStore.ts
src/utils/: instrumentation.ts
src/workers/: pythonExecutionWorker.ts  pythonLspWorker.ts
(+37 files in other folders)
