[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-visualizer-python"
dynamic = ["version"]
description = "Python API for algo-visualizer."
authors = [{ name = "sweetbrulee", email = "sparrowking002@gmail.com" }]
requires-python = "==3.13"
dependencies = ['pydantic']

[tool.setuptools.packages.find]
where = ["src"]