[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lsp"
dynamic = ["version"]
description = "Python Language Server Protocol"
authors = [{ name = "sweetbrulee", email = "sparrowking002@gmail.com" }]
requires-python = "==3.13"
dependencies = ['jedi', 'docstring-to-markdown']

[tool.setuptools.packages.find]
where = ["src"]